added webform knowledge and search taxonomy by name to index

--- a/config/default/captcha.captcha_point.user_login_form.yml
+++ b/config/default/captcha.captcha_point.user_login_form.yml
@@ -1,6 +1,6 @@
 uuid: 14c743df-7407-4d46-9ba2-fcd2c0b3002c
 langcode: en
-status: false
+status: true
 dependencies: {  }
 _core:
   default_config_hash: crLwyc9uwZ8Bv8lpMLIOEQYHOxW_mS49jaDf_95-o4I
