--- a/config/default/captcha.captcha_point.contact_message_feedback_form.yml
+++ b/config/default/captcha.captcha_point.contact_message_feedback_form.yml
@@ -1,6 +1,6 @@
 uuid: 7d7c4c61-e6d8-48f3-99e0-72ba37b3c852
 langcode: en
-status: false
+status: true
 dependencies: {  }
 _core:
   default_config_hash: MbTbUeeaumH8DjENUwT0-8uW9UuxyNHbF6jbKCLhYkk
