--- a/config/default/captcha.captcha_point.user_register_form.yml
+++ b/config/default/captcha.captcha_point.user_register_form.yml
@@ -1,6 +1,6 @@
 uuid: d741d461-5ee8-49c1-918e-2d64bbb1ae09
 langcode: en
-status: false
+status: true
 dependencies: {  }
 _core:
   default_config_hash: O11nB9Assnic6AhIuaeK_CQdh_zO0udxABDnUZJupis
