--- a/config/default/taxonomy.vocabulary.ceremonial_time.yml
+++ b/config/default/taxonomy.vocabulary.ceremonial_time.yml
@@ -1,23 +1,7 @@
 uuid: b5def2b4-166a-490c-8597-b2df8ac9b707
 langcode: en
 status: true
-dependencies:
-  module:
-    - scheduler
-third_party_settings:
-  scheduler:
-    expand_fieldset: when_required
-    fields_display_mode: vertical_tab
-    publish_enable: false
-    publish_past_date: error
-    publish_past_date_created: false
-    publish_required: false
-    publish_revision: false
-    publish_touch: false
-    show_message_after_update: true
-    unpublish_enable: false
-    unpublish_required: false
-    unpublish_revision: false
+dependencies: {  }
 name: 'Related events/ceremonial Time'
 vid: ceremonial_time
 description: 'Associated events/ceremonial time of the year'
