--- a/config/default/taxonomy.vocabulary.folders.yml
+++ b/config/default/taxonomy.vocabulary.folders.yml
@@ -1,23 +1,7 @@
 uuid: b1948deb-e65d-4223-9341-3f147e1639cd
 langcode: en
 status: true
-dependencies:
-  module:
-    - scheduler
-third_party_settings:
-  scheduler:
-    expand_fieldset: when_required
-    fields_display_mode: vertical_tab
-    publish_enable: false
-    publish_past_date: error
-    publish_past_date_created: false
-    publish_required: false
-    publish_revision: false
-    publish_touch: false
-    show_message_after_update: true
-    unpublish_enable: false
-    unpublish_required: false
-    unpublish_revision: false
+dependencies: {  }
 name: Folders
 vid: folders
 description: 'Folders use to categories GKS content for use in the special projects.'
