--- a/config/default/taxonomy.vocabulary.item_type.yml
+++ b/config/default/taxonomy.vocabulary.item_type.yml
@@ -1,23 +1,7 @@
 uuid: 97412e5a-2bee-4426-8998-858c913306c7
 langcode: en
 status: true
-dependencies:
-  module:
-    - scheduler
-third_party_settings:
-  scheduler:
-    expand_fieldset: when_required
-    fields_display_mode: vertical_tab
-    publish_enable: false
-    publish_past_date: error
-    publish_past_date_created: false
-    publish_required: false
-    publish_revision: false
-    publish_touch: false
-    show_message_after_update: true
-    unpublish_enable: false
-    unpublish_required: false
-    unpublish_revision: false
+dependencies: {  }
 name: 'Heritage Item Type'
 vid: item_type
 description: ''
