--- a/config/default/taxonomy.vocabulary.local_origin.yml
+++ b/config/default/taxonomy.vocabulary.local_origin.yml
@@ -1,23 +1,7 @@
 uuid: 8b4ab2b2-e7c8-4eb3-b72e-1a56c0cace8d
 langcode: en
 status: true
-dependencies:
-  module:
-    - scheduler
-third_party_settings:
-  scheduler:
-    expand_fieldset: when_required
-    fields_display_mode: vertical_tab
-    publish_enable: false
-    publish_past_date: error
-    publish_past_date_created: false
-    publish_required: false
-    publish_revision: false
-    publish_touch: false
-    show_message_after_update: true
-    unpublish_enable: false
-    unpublish_required: false
-    unpublish_revision: false
+dependencies: {  }
 name: 'Local Origin'
 vid: local_origin
 description: 'Typically the specific place or community associated with an item.  The full record contains a reason for the attribution.'
