--- a/config/default/taxonomy.vocabulary.part_of_speech.yml
+++ b/config/default/taxonomy.vocabulary.part_of_speech.yml
@@ -1,23 +1,7 @@
 uuid: 7c7a5a72-3d8f-4109-b543-7ecd1536e126
 langcode: en
 status: true
-dependencies:
-  module:
-    - scheduler
-third_party_settings:
-  scheduler:
-    expand_fieldset: when_required
-    fields_display_mode: vertical_tab
-    publish_enable: false
-    publish_past_date: error
-    publish_past_date_created: false
-    publish_required: false
-    publish_revision: false
-    publish_touch: false
-    show_message_after_update: true
-    unpublish_enable: false
-    unpublish_required: false
-    unpublish_revision: false
+dependencies: {  }
 name: 'Part of speech'
 vid: part_of_speech
 description: ''
