--- a/config/default/taxonomy.vocabulary.seasonal_time.yml
+++ b/config/default/taxonomy.vocabulary.seasonal_time.yml
@@ -1,23 +1,7 @@
 uuid: 23cc87cf-5150-471d-927e-d906b4dc5141
 langcode: en
 status: true
-dependencies:
-  module:
-    - scheduler
-third_party_settings:
-  scheduler:
-    expand_fieldset: when_required
-    fields_display_mode: vertical_tab
-    publish_enable: false
-    publish_past_date: error
-    publish_past_date_created: false
-    publish_required: false
-    publish_revision: false
-    publish_touch: false
-    show_message_after_update: true
-    unpublish_enable: false
-    unpublish_required: false
-    unpublish_revision: false
+dependencies: {  }
 name: 'Seasonal Time'
 vid: seasonal_time
 description: 'Associated seasonal time'
