--- a/config/default/core.entity_view_display.node.language_item.teaser.yml
+++ b/config/default/core.entity_view_display.node.language_item.teaser.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.node.language_item.field_related_heritage_item
     - field.field.node.language_item.field_related_language_item
     - field.field.node.language_item.field_related_places
+    - field.field.node.language_item.field_share_knowledge_form
     - field.field.node.language_item.field_source
     - field.field.node.language_item.field_term_definition
     - field.field.node.language_item.field_unique_id
@@ -157,6 +158,7 @@ hidden:
   field_related_heritage_item: true
   field_related_language_item: true
   field_related_places: true
+  field_share_knowledge_form: true
   field_source: true
   field_unique_id: true
   langcode: true
