--- a/config/default/core.entity_form_display.node.language_item.default.yml
+++ b/config/default/core.entity_form_display.node.language_item.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.language_item.field_related_heritage_item
     - field.field.node.language_item.field_related_language_item
     - field.field.node.language_item.field_related_places
+    - field.field.node.language_item.field_share_knowledge_form
     - field.field.node.language_item.field_source
     - field.field.node.language_item.field_term_definition
     - field.field.node.language_item.field_unique_id
@@ -28,6 +29,7 @@ dependencies:
     - media_library
     - path
     - text
+    - webform
 third_party_settings:
   field_group:
     group_about_this_lang_record:
@@ -152,6 +154,15 @@ content:
     weight: 18
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_share_knowledge_form:
+    type: webform_entity_reference_select
+    weight: 27
+    region: content
+    settings:
+      default_data: false
+      webforms:
+        - contribute_knowledge
     third_party_settings: {  }
   field_source:
     type: options_select
