--- a/config/default/core.entity_view_display.node.language_item.default.yml
+++ b/config/default/core.entity_view_display.node.language_item.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.language_item.field_related_heritage_item
     - field.field.node.language_item.field_related_language_item
     - field.field.node.language_item.field_related_places
+    - field.field.node.language_item.field_share_knowledge_form
     - field.field.node.language_item.field_source
     - field.field.node.language_item.field_term_definition
     - field.field.node.language_item.field_unique_id
@@ -24,6 +25,7 @@ dependencies:
     - ds
     - text
     - user
+    - webform
 third_party_settings:
   ds:
     layout:
@@ -192,6 +194,14 @@ content:
     third_party_settings: {  }
     weight: 14
     region: main
+  field_share_knowledge_form:
+    type: webform_entity_reference_entity_view
+    label: above
+    settings:
+      source_entity: true
+    third_party_settings: {  }
+    weight: 19
+    region: content
   field_source:
     type: entity_reference_label
     label: inline
