--- a/config/default/core.entity_view_display.node.language_item.full.yml
+++ b/config/default/core.entity_view_display.node.language_item.full.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.node.language_item.field_related_heritage_item
     - field.field.node.language_item.field_related_language_item
     - field.field.node.language_item.field_related_places
+    - field.field.node.language_item.field_share_knowledge_form
     - field.field.node.language_item.field_source
     - field.field.node.language_item.field_term_definition
     - field.field.node.language_item.field_unique_id
@@ -26,6 +27,7 @@ dependencies:
     - layout_builder
     - text
     - user
+    - webform
 third_party_settings:
   ds:
     layout:
@@ -68,6 +70,7 @@ third_party_settings:
         - field_folders
         - field_audio_video
         - field_gks_reference_number
+        - field_share_knowledge_form
     fields:
       node_title:
         plugin_id: node_title
@@ -525,6 +528,49 @@ content:
             prefix: ''
             suffix: ''
     weight: 12
+    region: main
+  field_share_knowledge_form:
+    type: webform_entity_reference_link
+    label: hidden
+    settings:
+      label: 'Do You Have Knowledge to Contribute? Share with Us.'
+      dialog: normal
+      attributes:
+        class:
+          - button
+          - btn
+          - btn-primary
+        0: 'current-page:url:unaliased:args:value:1'
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: true
+            lbw-el: strong
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: false
+            ow: true
+            ow-el: ''
+            ow-cl: field-outer
+            ow-at: ''
+            ow-def-at: true
+            ow-def-cl: true
+            fis: false
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: false
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
+    weight: 18
     region: main
   field_source:
     type: entity_reference_label
