--- a/config/default/core.menu.static_menu_link_overrides.yml
+++ b/config/default/core.menu.static_menu_link_overrides.yml
@@ -1,3 +1,21 @@
 _core:
   default_config_hash: jdY7AU0tU-QsjmiOw3W8vwpYMb-By--_MSFgbqKUTYM
-definitions: {  }
+definitions:
+  masquerade__unmasquerade:
+    enabled: false
+    menu_name: account
+    parent: ''
+    expanded: false
+    weight: -50
+  user__page:
+    weight: -45
+    menu_name: account
+    parent: ''
+    enabled: true
+    expanded: false
+  user__logout:
+    weight: -44
+    menu_name: account
+    parent: ''
+    expanded: false
+    enabled: true
