--- a/config/default/login_destination.destination.user_have_total_control.yml
+++ b/config/default/login_destination.destination.user_have_total_control.yml
@@ -8,17 +8,10 @@ name: user_have_total_control
 label: 'User have total control'
 triggers:
   login: login
-destination_path: 'internal:/admin/dashboard'
+destination_path: 'internal:/node/59135'
 pages_type: 0
 pages: ''
 language: ''
-roles:
-  editor: editor
-  content_admin: content_admin
-  site_admin: site_admin
-  research_assistant: research_assistant
-  full_member: full_member
-  manager: manager
-  administrator: administrator
+roles: {  }
 weight: 0
 enabled: true
